--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,11 @@ dependencies:
   get: ^4.6.5
   json_annotation: ^4.7.0
   equatable: ^2.0.5
-  firebase_auth: ^0.16.0
-  google_sign_in: ^4.4.4
+  firebase_auth: any
+  google_sign_in: any
+  cloud_firestore: any
+  firebase_core: any
+
 
   flutter_bloc: any
   cached_network_image: any
@@ -49,9 +52,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/login.png
+     - assets/register.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
